--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,22 @@
-title : Embeddable
-
-markdown: kramdown
-
-safe: true
-lsi: false
-pygments: true
-auto: true
-
-source: embeddable
-destination: embeddable
+title:        {"API Embeddables"}
+url:          http://embeddable.apievangelist.com
+version:      1.1.1
+author:
+  name:       'Kin Lane'
+  email:      'info@apievangelist.com'
+markdown:     rdiscount
+permalink:    pretty
+pygments:     true
 
 permalink: /:categories/:year/:month/:day/:title 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
-paginate: 10
-paginate_path: "/blog/page:num"
+paginate: 50
+paginate_path: "/news/page:num"
 
 production_url : http://embeddable.apievangelist.com
 
 BASE_PATH : http://embeddable.apievangelist.com
 
-archive_path: /archive.html
 categories_path : /categories.html
 tags_path : /tags.html
