--- a/_data/organizations/index.yaml
+++ b/_data/organizations/index.yaml
@@ -1,144 +1,226 @@
-- slug: embedly
-  name: Embedly
+- slug: apache-avro
+  name: Apache Avro
   description: >-
-    Embedly provides a platform and suite of tools to make embedding and
-    previewing links simple. Embedly helps publishers and consumers manage embed
-    codes from more than 100 Websites and APIs, including YouTube, Flickr,
-    Ustream, Picassa, Hulu, Twitpic, Quantcast, and CrunchBase. It automatically
-    convert links from these sources into embedded media on the fly.
-  url: 'http://embed.ly/'
-  short_url: ''
-  twitter: 'https://twitter.com/embedly'
-  blog: 'https://twitter.com/weogeostatus'
-  blog_rss: 'http://blog.embed.ly/rss'
-  github: 'https://github.com/embedly'
-  image: ''
-  tags: 'Videos,Social,Embed,Embeddable,Scraping,Scraping Tools'
-- slug: addthis
-  name: AddThis
-  description: >-
-    AddThis, the new brand name for Clearspring Technologies, is the leader in
-    socially connecting publishers, services and advertisers to audiences on the
-    open web. Reaching more than 1.3 billion unique users monthly,
-    AddThis&rsquo; social tools and analytics are used on more than 14 million
-    unique domains to distribute and track digital content such as web pages,
-    widgets, and videos to social networks, bookmarking sites, blogs, and more.
-    To learn more visit AddThis.com
-  url: 'http://www.addthis.com/'
-  short_url: ''
-  twitter: 'https://twitter.com/addthis'
-  blog: 'http://www.addthis.com/blog/'
-  blog_rss: 'http://www.addthis.com/blog/feed/'
-  github: ''
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/addthis-logo.jpg
-  tags: 'Sharing,Embeddable,Social Bookmarking,Link,Links'
-- slug: stackpile
-  name: StackPile
-  description: >-
-    A better way to install 3rd party apps. StackPile allows you to install and
-    use 3rd party tools and apps on your website in seconds without expensive
-    code changes.
-  url: 'https://stackpile.io/'
-  short_url: ''
-  twitter: 'https://twitter.com/stackpile'
-  blog: ''
-  blog_rss: ''
-  github: ''
-  image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/stackpile-logo.png
-  tags: 'iPaaS,Embeddable'
-- slug: google-fusion-tables
-  name: Google Fusion Tables
-  description: >-
-    Fusion Tables is an experimental data visualization web application to
-    gather, visualize, and share data tables.
-  url: 'https://developers.google.com/fusiontables/'
+    Apache Avro is a data serialization system. Avro relies on schemas. When
+    Avro data is read, the schema used when writing it is always present. This
+    permits each datum to be written with no per-value overheads, making
+    serialization both fast and small. This also facilitates use with dynamic,
+    scripting languages, since data, together with its schema, is fully
+    self-describing.
+  url: 'https://avro.apache.org/docs/current/'
   short_url: ''
   twitter: ''
   blog: ''
   blog_rss: ''
   github: ''
   image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/google-fusion-tables.jpg
-  tags: 'Google APIs,Visualizations,Data,Database,Spreadsheets,Embeddable'
-- slug: the-open-graph-protocol
-  name: The Open Graph Protocol
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/apache-avro.png
+  tags: Definitions
+- slug: api-blueprint
+  name: API Blueprint
   description: >-
-    The Open Graph protocol enables any web page to become a rich object in a
-    social graph. For instance, this is used on Facebook to allow any web page
-    to have the same functionality as any other object on Facebook.
-  url: 'http://ogp.me/'
+    API Blueprint is a documentation-oriented API description language. A couple
+    of semantic assumptions over the plain Markdown. API Blueprint is perfect
+    for designing your Web API and its comprehensive documentation but also for
+    quick prototyping and collaboration. It is easy to learn and even easier to
+    read &ndash; after all it is just a form of plain text.
+  url: 'https://apiblueprint.org/'
+  short_url: ''
+  twitter: 'https://twitter.com/apiblueprint'
+  blog: ''
+  blog_rss: ''
+  github: 'https://github.com/apiaryio/api-blueprint'
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/apiblueprint-logo-2.png
+  tags: Definitions
+- slug: api-transformer
+  name: API Transformer
+  description: >-
+    Transform API Descriptions from/to various formats e.g., Swagger, API
+    Blueprint, RAML, WADL, Google Discovery, I/O Docs. Please contact us for
+    production and high volume usage.
+  url: 'https://apitransformer.com/'
   short_url: ''
   twitter: ''
   blog: ''
   blog_rss: ''
   github: ''
   image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/open-graph-protocol.png
-  tags: 'Embeddable,Media,Social'
-- slug: apiembed
-  name: APIEmbed
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/api-transformer-screenshot.png
+  tags: 'Definitions,Conversion,My API Stack'
+- slug: elastic-path
+  name: Elastic Path
   description: >-
-    Auto-generated code snippets in many programming languages for your website,
-    blog or API documentation.
-  url: 'https://apiembed.com/'
+    Elastic Path builds commerce software that powers the next generation of
+    digital experiences, helping businesses generate more revenue from their
+    goods, services, and content. Our products, including Commerce Engine,
+    Cortex, and Subscriptions, enable companies to unite discovery, buying, and
+    consumption into outstanding customer experiences that drive more engagement
+    and conversion.
+  url: 'http://www.elasticpath.com'
+  short_url: ''
+  twitter: 'https://twitter.com/elasticpath'
+  blog: ''
+  blog_rss: ''
+  github: 'https://github.com/elasticpath'
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/elastic-path.jpeg
+  tags: 'Enterprise,Retail,Commerce,Hypermedia,API LIfeycle,Definitions'
+- slug: frictionless-data
+  name: Frictionless Data
+  description: >-
+    Data Packages are a lightweight containerization format for data. They
+    provide the foundation for frictionless data transport.&nbsp;Tools and
+    integrations to make it easy to integrate Data Packages into your data
+    processing and publishing workflows.&nbsp;Learn how to get started using and
+    developing with Data Packages through our guides, tutorials and
+    documentation.
+  url: 'http://specs.frictionlessdata.io/'
+  short_url: ''
+  twitter: ''
+  blog: ''
+  blog_rss: ''
+  github: 'https://github.com/frictionlessdata'
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/frictionlessdata-logo.png
+  tags: 'Data,Schema,Definitions'
+- slug: postman
+  name: Postman
+  description: >-
+    Postman on Chrome is the most efficient way to test, develop and document
+    APIs. Create complex requests, go back in time and view results in a
+    beautiful way. Postman has more than 80 features to help you at every
+    step.&nbsp;Our user base is growing rapidly and with more tools in the
+    pipeline, Postman aims to provide the most comprehensive API development and
+    testing solution to developers.
+  url: 'http://www.getpostman.com/'
+  short_url: ''
+  twitter: 'https://twitter.com/postmanclient'
+  blog: 'http://blog.getpostman.com/'
+  blog_rss: 'http://blog.getpostman.com/index.php/feed/'
+  github: 'https://github.com/postmanlabs'
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/postman-rest-logo.png
+  tags: 'Clients, Testing, Definitions'
+- slug: google-api-discovery-service
+  name: Google API Discovery Service
+  description: >-
+    You can use the Google API Discovery Service to build client libraries, IDE
+    plugins, and other tools that interact with Google APIs. It provides a
+    lightweight, JSON-based API that exposes machine-readable metadata about
+    Google APIs.
+  url: 'https://developers.google.com/discovery/'
   short_url: ''
   twitter: ''
   blog: ''
   blog_rss: ''
   github: ''
   image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/APIembed.png
-  tags: 'Embeddable,Code,Documentation'
-- slug: iframely
-  name: Iframely
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/Screen
+    Shot 2017-03-16 at 9.06.47 PM.png
+  tags: 'Discovery,Google APIs,Definitions'
+- slug: odata.org
+  name: OData
   description: >-
-    Iframely Open-Source package includes the client javascript wrapper of the
-    API, so you don't need to spend time on it yourself. If you'd prefer to
-    render a widget from the data yourself, please refer to How to Render a
-    Widget. If you are using Cloud API, you don't need iframely.js as the embed
-    code will be provided to you by API as the html field of JSON response. You
-    may find iframely.js lib in /static/js/iframely.js folder. It facilitates
-    calls and fetches information from /iframely API endpoint and renders
-    responsive embed widgets from the data received.
-  url: 'https://iframely.com/'
+    OData (Open Data Protocol) is an OASIS standard that defines the best
+    practice for building and consuming RESTful APIs. OData helps you focus on
+    your business logic while building RESTful APIs without having to worry
+    about the approaches to define request and response headers, status codes,
+    HTTP methods, URL conventions, media types, payload formats and query
+    options etc.
+  url: 'http://www.odata.org/'
+  short_url: 'http://apis.how/byirz5zgt7'
+  twitter: 'https://twitter.com/odataorg'
+  blog: 'http://www.odata.org/blog/'
+  blog_rss: ''
+  github: 'https://github.com/odata'
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/odata-logo.png
+  tags: Definitions
+- slug: openapi-spec
+  name: OpenAPIs
+  description: >-
+    The Open API Initiative (OAI) was created by a consortium of forward-looking
+    industry experts who recognize the immense value of standardizing on how
+    REST APIs are described. As an open governance structure under the Linux
+    Foundation, the OAI is focused on creating, evolving and promoting a vendor
+    neutral description format. SmartBear Software is donating the Swagger
+    Specification directly to the OAI as the basis of this Open Specification.
+    &nbsp;
+  url: 'https://openapis.org/'
   short_url: ''
-  twitter: 'https://twitter.com/iframely'
+  twitter: 'https://twitter.com/openapispec'
+  blog: 'https://openapis.org/news-faq/blog'
+  blog_rss: 'https://www.openapis.org/feed'
+  github: 'https://github.com/OAI'
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/oai-logo.png
+  tags: Definitions
+- slug: raml
+  name: RAML
+  description: >-
+    RESTful API Modeling Language (RAML) is a simple and succinct way of
+    describing practically-RESTful APIs. It encourages reuse, enables discovery
+    and pattern-sharing, and aims for merit-based emergence of best practices.
+    The goal is to help our current API ecosystem by solving immediate problems
+    and then encourage ever-better API patterns. RAML is built on broadly-used
+    standards such as YAML and JSON and is a non-proprietary, vendor-neutral
+    open spec.
+  url: 'http://raml.org/'
+  short_url: ''
+  twitter: ''
+  blog: 'http://open-raml.blogspot.com/'
+  blog_rss: 'http://open-raml.blogspot.com/feeds/posts/default?alt=rss'
+  github: ''
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/raml-logo.jpg
+  tags: Definitions
+- slug: ''
+  name: RESTdesc
+  description: >-
+    Semantic descriptions for hypermedia APIs. RESTdesc allows you to capture
+    the functionality of hypermedia APIs, so automated agents can use them.
+    Despite their powerful capabilities, RESTdesc descriptions are easy to
+    master. Description is not a goal in itself: you want your API to be used.
+    See how RESTdesc opens up your API for discovery, based on its functional
+    characteristics.
+  url: 'http://restdesc.org/'
+  short_url: 'http://apis.how/vymksgxgfl'
+  twitter: ''
   blog: ''
   blog_rss: ''
   github: ''
   image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/iframely.png
-  tags: Embeddable
-- slug: mozilla-brick
-  name: Mozilla Brick
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/restdesc-logo.png
+  tags: Definitions
+- slug: schema.org
+  name: Schema.org
   description: >-
-    Brick is a collection of UI components designed for the easy and quick
-    building of web application UIs. Brick components are built using the Web
-    Components standard to allow developers to describe the UI of their app
-    using the HTML syntax they already know.
-  url: 'http://brick.mozilla.io/'
+    Schema.org is a collaborative, community activity with a mission to create,
+    maintain, and promote schemas for structured data on the Internet, on web
+    pages, in email messages, and beyond. Schema.org vocabulary can be used with
+    many different encodings, including RDFa, Microdata and JSON-LD.&nbsp;
+  url: 'http://schema.org'
   short_url: ''
-  twitter: 'https://twitter.com/mozbrick'
-  blog: 'http://brick.mozilla.io/v2.0/blog'
-  blog_rss: ''
-  github: 'https://github.com/mozbrick'
-  image: ''
-  tags: Embeddable
-- slug: oembed
-  name: oEmbed
+  twitter: ''
+  blog: 'http://blog.schema.org/'
+  blog_rss: 'http://blog.schema.org/feeds/posts/default?alt=rss'
+  github: ''
+  image: >-
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/schema-org-logo.jpeg
+  tags: 'Definitions, Schema'
+- slug: u.s.-data-federation
+  name: U.S. Data Federation
   description: >-
-    oEmbed is a format for allowing an embedded representation of a URL on third
-    party sites. The simple API allows a website to display embedded content
-    (such as photos or videos) when a user posts a link to that resource,
-    without having to parse the resource directly.
-  url: 'http://oembed.com/'
+    The U.S. Data Federation supports data interoperability and harmonization
+    across Federal, state, and local government agencies by highlighting common
+    data formats, API specifications, and metadata vocabularies.
+  url: 'http://federation.data.gov/'
   short_url: ''
   twitter: ''
   blog: ''
   blog_rss: ''
   github: ''
   image: >-
-    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/oEmbed.png
-  tags: Embeddable
+    http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/usdf-logo.png
+  tags: 'Federal Government,Definitions'
